--- a/assets/main.css
+++ b/assets/main.css
@@ -858,13 +858,13 @@ pre {
   font-weight: 400;
   font-size: 0.875em;
   line-height: 1.7142857;
-  margin-top: 1.7142857em;
-  margin-bottom: 1.7142857em;
+  margin-top: 0.8571429em;
+  margin-bottom: 0.8571429em;
   border-radius: 0.375rem;
   padding-top: 0.8571429em;
-  padding-inline-end: 1.1428571em;
+  padding-right: 0.8571429em;
   padding-bottom: 0.8571429em;
-  padding-inline-start: 1.1428571em;
+  padding-left: 0.8571429em;
 }
 
 .prose :where(pre code):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
@@ -1578,6 +1578,14 @@ pre {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.highlight > div {
+  border-radius: 0.375rem;
+}
+
+.highlight tr {
+  border-bottom-width: 0;
+}
+
 .btn-menu::before,
   .btn-menu::after {
   display: block;
@@ -1639,6 +1647,12 @@ article code {
   display: inline-block;
   font-size: 0.875rem !important;
   line-height: 1.5rem !important;
+}
+
+article pre {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 article .highlight {
