--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
     {{ if ne .Type "page" }}
     <div class="text-xs antialiased opacity-60">
       {{ if .Date }}
-      <time>{{ .Date | time.Format ":date_medium" }}</time>
+      <time>{{ .Date | time.Format "2006-01-02" }}</time>
       {{ end }}<!---->
       {{ $single_author := or .Params.Author site.Author.name }}
       <!---->
@@ -20,6 +20,19 @@
   </header>
 
   <section>{{ .Content }}</section>
+
+    <!-- Post Categories -->
+    {{ if .Params.categories }}
+    <footer class="mt-12 flex flex-wrap">
+      {{ range .Params.categories }} {{ $href := print (absURL "categories/") (urlize .) }}
+      <a
+        class="mr-1.5 mb-1.5 rounded-lg bg-black/[3%] px-5 py-2 no-underline dark:bg-white/[8%]"
+        href="{{ $href }}"
+        >{{ . }}</a
+      >
+      {{ end }}
+    </footer>
+    {{ end }}
 
   <!-- Post Tags -->
   {{ if .Params.tags }}
