--- a/assets/main.css
+++ b/assets/main.css
@@ -1395,6 +1395,14 @@ pre {
   justify-content: center;
 }
 
+.list-none {
+  list-style-type: none;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-2\.5 {
   gap: 0.625rem;
 }
