--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -19,7 +19,7 @@
       <!-- Post Categories -->
       {{ if .Params.categories }}
       <span class="inline-flex flex-wrap ml-6">
-        {{ range .Params.categories }} {{ $href := print (absURL "categories/") (urlize .) }}
+        {{ range .Params.categories }} {{ $href := print (absURL "categories/") (urlize .) "/" }}
         <a
           class="ml-1.5 no-underline"
           href="{{ $href }}"
@@ -36,7 +36,7 @@
   <!-- Post Tags -->
   {{ if .Params.tags }}
   <footer class="mt-12 flex flex-wrap">
-    {{ range .Params.tags }} {{ $href := print (absURL "tags/") (urlize .) }}
+    {{ range .Params.tags }} {{ $href := print (absURL "tags/") (urlize .) "/" }}
     <a
       class="mb-1.5 ltr:mr-1.5 rtl:ml-1.5 rounded-lg bg-black/[3%] px-5 py-1 no-underline hover:bg-black/[6%] dark:bg-white/[8%] dark:hover:bg-white/[12%]"
       href="{{ $href }}"
