--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -3,7 +3,7 @@
 {{ $items := .Data.Terms.ByCount }}
 <ul class="{{ if eq $plural "tags" }}flex flex-wrap list-none{{ end }}">
   {{- range $item := $items }}
-  {{ $href := print (absURL $plural) "/" (urlize .Name) }}
+  {{ $href := print (urlize .Name) "/" }}
   <li class="mr-5">
     <a class="no-underline" href="{{ $href }}">{{ if eq $plural "tags" }}#{{ end }}{{ $item.Name }}<span class="ml-1.5 text-sm opacity-60">({{ len .Pages }})</span></a>
   </li>
